Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -148,7 +148,6 @@ header.bk-header {
     ul {
         width: 100%;
         padding: 20px 0;
-        text-align: center;
         @media @tablet {
             border-bottom: 1px solid @color-swatch5;
             padding: 30px 0;
